--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     padding-top: 2%; /* may take this out with other styling */
 }
 
-.container {
+.container, .contentContainer {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
