--- a/style.css
+++ b/style.css
@@ -13,10 +13,19 @@ main {
     padding-bottom: 3em;
 }
 
+.css-header {
+    padding-bottom: 3em;
+    background: #f1f6f1;
+    border: 2px solid #162524;
+}
+
 h1 {
     text-align: center;
     padding-top: 2%; /* may take this out with other styling */
     color: #142020;
+    font-size: -webkit-xxx-large;
+    -webkit-text-stroke: 1px #162524;
+    
    /* font-family: 'Archivo', sans-serif;*/
   /* font-family: 'Roboto', sans-serif;*/
 
