updated images for header background

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
     padding-bottom: 3em;
     background: #f1f6f1;
     border: 2px solid #162524;
-    background-image: url('./MySpaceScales.png');
+    background-image: url('./MySpaceScalesCompressed.png');
 }
 
 h1 {
