--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     background: #E1E6E3;
+    /* background: #1c2e2d; */
     font-family: 'Exo 2', sans-serif;
 }
 
@@ -15,8 +16,8 @@ main {
 .css-header {
     padding-bottom: 3em;
     background: #f1f6f1;
-    border: 2px solid #162524;
-    background-image: url('./MySpaceScalesCompressed.png');
+    /* border: 2px solid #162524; */
+    /* background-image: url('./MySpaceScalesCompressed.png'); */
 }
 
 h1 {
