--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
 }
 
 body {
-    background: #E1E6E3;
+    /* background: #E1E6E3; */
     /* background: #1c2e2d; */
     font-family: 'Exo 2', sans-serif;
+    /* background-image: linear-gradient(#3b4753, rgba(227, 241, 231, 0.6)); */
+    background: linear-gradient(rgba(227, 241, 231, 0.6), #2C4846);
 }
 
 main {
@@ -15,7 +17,7 @@ main {
 
 .css-header {
     padding-bottom: 3em;
-    background: #f1f6f1;
+    /* background: #f1f6f1; */
     /* background-image: url('./MySpaceScalesCompressed.png'); */
 }
 
