--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     /* background: #1c2e2d; */
     font-family: 'Exo 2', sans-serif;
     /* background-image: linear-gradient(#3b4753, rgba(227, 241, 231, 0.6)); */
-    background: linear-gradient(rgba(227, 241, 231, 0.6), #2C4846);
+    /* background: linear-gradient(rgba(227, 241, 231, 0.6), #427A76); */
+    background: linear-gradient(#A9C2C0, #427A76);
 }
 
 main {
@@ -39,7 +40,8 @@ h2 {
 
 p {
     font-size: 16px;
-    color: #162524;
+    color: #162524; 
+    /* color: #e1e6e3 */
 }
 
 .css-container {
@@ -72,7 +74,9 @@ p {
     text-align: left;
     max-width: 960px;
     font-size: large;
-    color: #1C2E2D;
+    /* color: #1C2E2D; */
+    color: #e1e6e3
+
 
 }
 
