Updated media query for title on phone size, experimented more with gradient background color

--- a/float-grid.css
+++ b/float-grid.css
@@ -85,6 +85,7 @@
         text-align: center;
         padding: 10%;
         padding-bottom: 0;
+        font-size: xx-large;
     }
 
     .pictureInformation {
