--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ p {
     text-align: left;
     max-width: 960px;
     font-size: large;
-    /* color: #1C2E2D; */
-    color: #e1e6e3
+    color: #1C2E2D; 
+    /* color: #e1e6e3 */
 
 
 }
