--- a/style.css
+++ b/style.css
@@ -15,12 +15,17 @@ body {
 main {
     line-height: 1.6;
     padding-bottom: 3em;
+    /* padding-top: 10em; */
 }
 
 .css-header {
     padding-bottom: 3em;
     /* background: #f1f6f1; */
     /* background-image: url('./MySpaceScalesCompressed.png'); */
+    /* position: fixed; */
+    top: 0;
+    width: 100%;
+    height: 5em;
 }
 
 h1 {
@@ -93,7 +98,7 @@ p {
 
 .css-input-forms {
     height: 3em;
-    border-radius: 3em;
+    border-radius: .5em;
     width: 10%;
     font-size: medium;
     padding: .5em;
