Updated header style on ipad/768px widths, changed gradient color to be a better contrast to the text, removed unnecessary padding on header and results, added minimum width to form entry so didn't shring to small dot

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
     font-family: 'Exo 2', sans-serif;
     /* background-image: linear-gradient(#3b4753, rgba(227, 241, 231, 0.6)); */
     /* background: linear-gradient(rgba(227, 241, 231, 0.6), #427A76); */
-     background: linear-gradient(#e1e6e3, #427A76); */
+     /* background: linear-gradient(#e1e6e3, #427A76); */
+     background: linear-gradient(#e1e6e3, rgb(164, 238, 233));
     /* background: linear-gradient(#A9C2C0, rgb(127, 177, 173)); */
 }
 
@@ -25,7 +26,7 @@ main {
     /* position: fixed; */
     top: 0;
     width: 100%;
-    height: 5em;
+    /* height: 5em; */
 }
 
 h1 {
@@ -89,8 +90,8 @@ p {
     background-color:#f1f6f1;
     padding-bottom: 3em;
     margin-bottom: 3em;
-    margin-left: 10em;
-    margin-right: 10em;
+    /* margin-left: 10em;
+    margin-right: 10em; */
 }
 
 .css-search-buttons {
@@ -106,6 +107,7 @@ p {
 
 .css-input-forms {
     height: 3em;
+    min-width: 10em;
     border-radius: .5em;
     width: 10%;
     font-size: medium;
