--- a/float-grid.css
+++ b/float-grid.css
@@ -144,9 +144,13 @@
 /* Styles */
 /* 
 }/* iPads (portrait and landscape) ----------- */
-/* @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+ @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
 /* Styles */
-/* }
+  h1 {
+    padding-left: 3em;
+    padding-right: 3em;
+  }
+}
 
 /* iPads (landscape) ----------- */
 /* @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
@@ -155,4 +159,8 @@
 
  /* iPads (portrait) -----------  */
  /* @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
- Styles  */
+ Styles 
+
+ 
+
+ } */
