--- a/style.css
+++ b/style.css
@@ -11,11 +11,14 @@ body {
      /* background: linear-gradient(#e1e6e3, #427A76); */
      background: linear-gradient(#e1e6e3, rgb(164, 238, 233));
     /* background: linear-gradient(#A9C2C0, rgb(127, 177, 173)); */
+    width:100%;
+    margin: auto;
 }
 
 main {
     line-height: 1.6;
     padding-bottom: 5em;
+    width:100%;
     /* padding-top: 10em; */
 }
 
@@ -55,6 +58,7 @@ p {
     margin-right: auto;
     text-align: center;
     min-height: 600px;
+    width:100%;
  
 }
 
