--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ p {
 .css-image-description-text {
     text-align: left;
     max-width: 960px;
+    /* max-width: 560px; */
+    /* margin-left: 10em; */
     font-size: large;
     color: #1C2E2D; 
 }
@@ -87,10 +89,12 @@ p {
 .css-search-buttons {
     font-family:'Archivo', sans-serif;  
     font-size: medium;
+    min-width: 5em;
     border-radius: 3em;
     padding: .5em;
     margin-bottom:2em;
     margin-left: 2em;
+        /* margin-right: 2em; */
     background: #F1F6F1;
     border: 2px solid #79848F;
 }
