--- a/float-grid.css
+++ b/float-grid.css
@@ -145,14 +145,14 @@
 /* 
 
 
-}/* iPads (portrait and landscape) ----------- */
- @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-/* Styles */
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+
+  /* Styles */
   h1 {
     padding-left: 3em;
     padding-right: 3em;
   }
-
   
 }
 
