--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     text-align: center;
     padding-top: 2%;
     color: #162524;
-    font-size: -webkit-xxx-large;
+    font-size: 36pt;
     -webkit-text-stroke: .5px #162524;
 }
 
