updated README and changed linear gradient to both be HEX values

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     font-family: 'Exo 2', sans-serif;
-    background: linear-gradient(#e1e6e3, rgb(164, 238, 233));
+    background: linear-gradient(#E1E6E3,#A4EEE9);
     width:100%;
     margin: auto;
 }
